--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-native-project",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -13,29 +13,59 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@notifee/react-native": "^7.6.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-camera-roll/camera-roll": "^5.3.1",
+    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-firebase/app": "^17.4.0",
+    "@react-native-firebase/messaging": "^17.4.0",
+    "@react-native-firebase/storage": "^17.4.0",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.3.16",
+    "@stream-io/flat-list-mvcp": "^0.10.2",
     "expo": "~48.0.9",
+    "expo-build-properties": "^0.5.1",
+    "expo-document-picker": "^11.2.2",
     "expo-font": "~11.1.1",
+    "expo-haptics": "^12.2.1",
+    "expo-image-manipulator": "^11.1.1",
+    "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
+    "expo-media-library": "^15.2.3",
+    "expo-router": "^1.0.0-rc5",
+    "expo-sharing": "^11.2.2",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
     "expo-web-browser": "~12.1.1",
-    "expo-router": "^1.0.0-rc5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-document-picker": "^8.2.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-crop-picker": "^0.39.0",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-maps": "1.3.2",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10",
+    "stream-chat-expo": "^5.12.0",
+    "stream-chat-react-native": "^5.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.31",
+    "@types/react-native": "^0.71.5",
+    "@types/react-test-renderer": "^18.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~48.0.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.0.2"
   },
   "private": true
 }
