--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@notifee/react-native": "^7.6.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.3.1",
+    "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/netinfo": "9.3.7",
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/messaging": "^17.4.0",
@@ -23,7 +24,8 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.16",
     "@stream-io/flat-list-mvcp": "^0.10.2",
-    "expo": "~48.0.9",
+    "expo": "~48.0.10",
+    "expo-av": "~13.2.1",
     "expo-build-properties": "^0.5.1",
     "expo-document-picker": "^11.2.2",
     "expo-font": "~11.1.1",
@@ -40,17 +42,20 @@
     "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-document-picker": "^8.2.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-haptic-feedback": "^2.0.3",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-resizer": "^1.4.5",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-share": "^8.2.1",
     "react-native-svg": "13.4.0",
+    "react-native-video": "^5.2.1",
     "react-native-web": "~0.18.10",
     "stream-chat-expo": "^5.12.0",
     "stream-chat-react-native": "^5.12.0"
